--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8156,7 +8156,7 @@ a {
   color: #206dfb; }
   a:hover, a:focus {
     text-decoration: none;
-    color: #206dfb;
+    color: #fff;
     outline: none !important; }
 
 h1, h2, h3, h4, h5,
